--- a/fleet.html
+++ b/fleet.html
@@ -378,9 +378,9 @@
                 <div class="footer-column">
                     <h4>Liên hệ</h4>
                     <ul>
-                        <li><a href="mailto:contact@covasol.com.vn">contact@covasol.com.vn</a></li>
-                        <li><a href="tel:+84123456789">+84 123 456 789</a></li>
-                        <li><a href="#">Hà Nội, Việt Nam</a></li>
+                        <li><a href="mailto:covasol.studio@gmail.com">covasol.studio@gmail.com</a></li>
+                        <li><a href="tel:0559526824">0559526824</a></li>
+                        <li><a href="#">Hồ Chí Minh, Việt Nam</a></li>
                     </ul>
                 </div>
             </div>
